--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
         <version>2.7.4</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
-    <groupId>com.example</groupId>
+    <groupId>com.ilker</groupId>
     <artifactId>Earthquake_Service</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>Earthquake_Service</name>
